# openclaw-observatory

./: .env.example  .gitignore  AGENTS.md  ENGINEERING_PRINCIPLES.md  FLEET.md  MISSION.md  README.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
backend/: .dockerignore  ARCHITECTURE.md  Dockerfile  OPEN_QUESTIONS.md  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  auth.py  config.py  logging.py  main.py  metrics.py  middleware.py  spa.py  version.py
backend/migrations/: 0001_init.sql  0002_fleet_registry.sql  0003_missions.sql  0004_host_inventory.sql
backend/tests/: __init__.py  conftest.py  test_auth.py  test_clickhouse_integration.py  test_config.py  test_docker_status_route.py  test_events.py  test_events_read.py  test_health.py  test_health_score.py  test_heartbeat.py  test_host_inventory.py  test_logging.py  test_metrics.py  test_missions.py  test_monitor.py  test_offline.py  test_registry.py  test_spa.py  test_storage_memory.py  test_version.py
collectors/: README.md  config.example.env
collectors/observatory_collectors/: __init__.py  client.py  config.py  runner.py
deploy/: README.md  backend.example.env
docs/: M003-open-questions.md  M003.5-notes.md  M003.6-notes.md  architecture.md  deployment.md  frontend-architecture.md  release-process.md  requirements.md  roadmap.md  security.md  token-usage-architecture.md  vision.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
(+144 files in other folders)
